shellfirm/tests/snapshots/checks__.__tests__checks__git:git_reset.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "./tests/checks/git:git_reset.yaml",
        test: "git reset",
        check_detection_ids: [
            "git:git_reset",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/git:git_reset.yaml",
        test: "git    reset",
        check_detection_ids: [
            "git:git_reset",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/git:git_reset.yaml",
        test: "gitt reset",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
